# ppm2-mini-projek-backend

./: .dockerignore  .gitignore  Dockerfile  manage.py  pyproject.toml
core/: admin.py  models.py  routers.py  serializers.py  viewsets.py
core/helpers/: appscript_storage.py  upload.py
core/migrations/: 0001_initial.py  0002_alter_comment_thread.py  0002_alter_thread_comments_alter_thread_likes.py  0002_comment_created_at_like_created_at_thread_created_at_and_more.py  0003_alter_thread_media_id_photoprofile.py
project/: settings.py  urls.py
