[project]
name = "forum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django==5.2.*",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "markdown>=3.9",
    "whitenoise>=6.11.0",
]
